# rusted-cap

./: .gitignore  Cargo.toml  ENCODING_PIPELINE.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_FIXES_SUMMARY.md  PRODUCTION_SETUP.md  README.md  README_new.md  SCREENCAPTUREKIT_IMPLEMENTATION.md  SCREENCAPTUREKIT_INTEGRATION_COMPLETE.md  build-enhanced.sh  build.sh  index.d.ts  index.js  package-lock.json  package.json  test-audio-file-output.js  test-cap-style.js  test-displays.js  test-encoding.js  test-integration-summary.js  test-screencapturekit-audio.js  test-screencapturekit-permissions.js  test.js
.github/: copilot-instructions.md
examples/: README.md  electron-main.js  enhanced-electron-main.js  index.html  package.json  preload.js  renderer.js
src/: audio.rs  config.rs  error.rs  lib.rs  permissions.rs  platform.rs  recording.rs  screen.rs  screencapturekit.rs  screencapturekit_audio.rs
src/encoding/: audio_encoder.rs  hls.rs  mod.rs  s3_uploader.rs  video_encoder.rs
test-audio-output/: test_audio_reference.pcm
